# ToySPSC

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Containerfile  Doxyfile  README.ja.md  README.md  justfile
.github/workflows/: ci.yml
bench/: CMakeLists.txt  sanity_bench.cc  spsc_queue_bench.cc
docs/: 01_primitive_spsc.md
src/: main.cc
src/spsc/: spsc_queue.h
test/: CMakeLists.txt  sanity_test.cc  spsc_queue_test.cc
